--- a/config/diff_drive_controller.yaml
+++ b/config/diff_drive_controller.yaml
@@ -22,15 +22,16 @@ diff_drive_base_controller:
         wheel_separation: 0.25
         wheel_radius: 0.05
 
-        # wheel_separation_multiplier: 1.0
-        # left_wheel_radius_multiplier: 1.0
-        # right_wheel_radius_multiplier: 1.0
+        # Tweak this when build a real robot to match those 2
+        wheel_separation_multiplier: 1.0
+        left_wheel_radius_multiplier: 1.0
+        right_wheel_radius_multiplier: 1.0
 
         use_stamped_vel: false
 
-        # odom_frame_id: odom
-        # pose_covariance_diagonal : [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
-        # twist_covariance_diagonal: [0.001, 0.0, 0.0, 0.0, 0.0, 0.01]
+        odom_frame_id: odom
+        pose_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
+        twist_covariance_diagonal: [0.001, 0.0, 0.0, 0.0, 0.0, 0.01]
 
         # open_loop: true
         # enable_odom_tf: true
@@ -41,21 +42,21 @@ diff_drive_base_controller:
 
         # Velocity and acceleration limits
         # Whenever a min_* is unspecified, default to -max_*
-        # linear.x.has_velocity_limits: true
-        # linear.x.has_acceleration_limits: true
-        # linear.x.has_jerk_limits: false
-        # linear.x.max_velocity: 1.0
-        # linear.x.min_velocity: -1.0
-        # linear.x.max_acceleration: 1.0
-        # linear.x.max_jerk: 0.0
-        # linear.x.min_jerk: 0.0
+        linear.x.has_velocity_limits: true
+        linear.x.has_acceleration_limits: true
+        linear.x.has_jerk_limits: false
+        linear.x.max_velocity: 1.0
+        linear.x.min_velocity: -1.0
+        linear.x.max_acceleration: 2.0
+        linear.x.max_jerk: 0.0
+        linear.x.min_jerk: 0.0
 
-        # angular.z.has_velocity_limits: true
-        # angular.z.has_acceleration_limits: true
-        # angular.z.has_jerk_limits: false
-        # angular.z.max_velocity: 1.0
-        # angular.z.min_velocity: -1.0
-        # angular.z.max_acceleration: 1.0
-        # angular.z.min_acceleration: -1.0
-        # angular.z.max_jerk: 0.0
-        # angular.z.min_jerk: 0.0
+        angular.z.has_velocity_limits: true
+        angular.z.has_acceleration_limits: true
+        angular.z.has_jerk_limits: false
+        angular.z.max_velocity: 2.0
+        angular.z.min_velocity: -2.0
+        angular.z.max_acceleration: 2.0
+        angular.z.min_acceleration: -2.0
+        angular.z.max_jerk: 0.0
+        angular.z.min_jerk: 0.0
